Make CoffeeMachine worker virtual thread and improve refill behavior